Fixing action bar spacing

--- a/src/components/ActionBar/ActionBar.css
+++ b/src/components/ActionBar/ActionBar.css
@@ -1,7 +1,7 @@
 
 .action-bar-container {
     height: 65px;
-    width: 400px;
+    width: 430px;
     background-color: rgb(52, 58, 65);
     opacity: .5;
     border-radius: 20px;
